--- a/soffapp/Views/Shared/_Layout.cshtml
+++ b/soffapp/Views/Shared/_Layout.cshtml
@@ -152,7 +152,7 @@
           <li class="nav-item">
             <a asp-controller="Productos" asp-action="Index" class="nav-link text-white">
               <i class="nav-icon bi bi-cup-hot-fill"></i>
-              <p class="ml-1">Productos</p>
+              <p class="ml-1 p-4">Productos</p>
             </a>
           </li>
           <li class="nav-item">
