--- a/soffapp/Views/Productos/Index.cshtml
+++ b/soffapp/Views/Productos/Index.cshtml
@@ -1,28 +1,30 @@
 ﻿@model IEnumerable<soffapp.Models.Producto>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Productos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+@*<h1 style="font-family: 'Outfit'; font-size:20px; font-style:normal">Productos</h1>*@
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Agregar producto</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
+<div class="max-w-[1400px] mx-auto px-4">
+    @*<div class="">*@
+<table class="table bg-white w-full h-[500px] relative">
+            <thead class="h-11 w-[1200px] text-[9px] text-[#484848] text-left" style="background-color:#F8F8F8">
+        <tr >
             <th>
                 @Html.DisplayNameFor(model => model.Nombre)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Precio)
             </th>
-            <th>
+                <th>
                 @Html.DisplayNameFor(model => model.Estado)
             </th>
-            <th></th>
+            <th class="text-right" style="width:50%">Acciones</th>
         </tr>
     </thead>
     <tbody>
@@ -38,11 +40,13 @@
                 @Html.DisplayFor(modelItem => item.Estado)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdProducto">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdProducto">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdProducto">Delete</a>
+                        <a class="items-right" asp-action="Edit" asp-route-id="@item.IdProducto">Edit</a> |
+                        <a class="items-right" asp-action="Details" asp-route-id="@item.IdProducto">Details</a> |
+                        <a class="items-right" asp-action="Delete" asp-route-id="@item.IdProducto">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+    @*</div>*@
+</div>
