--- a/soffapp/Views/Shared/_Layout.cshtml
+++ b/soffapp/Views/Shared/_Layout.cshtml
@@ -144,9 +144,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link text-white">
-              <i class="bi bi-pie-chart-fill nav-icon"></i>
-              <p class="ml-1">Insumos</p>
+            <a class="nav-link text-white" asp-area="" asp-controller="Insumoes" asp-action="Index">
+                <i class="bi bi-pie-chart-fill nav-icon"></i>
+                <p class="ml-1">Insumos</p>
             </a>
           </li>
           <li class="nav-item">
