--- a/soffapp/Views/Shared/_Layout.cshtml
+++ b/soffapp/Views/Shared/_Layout.cshtml
@@ -156,7 +156,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link text-white">
+            <a asp-area="" asp-controller="Proveedors" asp-action="Index" class="nav-link text-white">
               <i class="nav-icon bi bi-people-fill"></i>
               <p class="ml-1">Proveedores</p>
             </a>
