--- a/soffapp/Views/Shared/_Layout.cshtml
+++ b/soffapp/Views/Shared/_Layout.cshtml
@@ -132,7 +132,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="../widgets.html" class="nav-link text-white">
+            <a asp-area="" asp-controller="Ventas" asp-action="Index" class="nav-link text-white">
               <i class="bi bi-ticket-perforated-fill nav-icon"></i>
               <p class="ml-1">Ventas</p>
             </a>
