barra busqueda buscador

--- a/soffapp/Views/Proveedors/Index.cshtml
+++ b/soffapp/Views/Proveedors/Index.cshtml
@@ -4,13 +4,59 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@*-------------------------------------------------------------*@
 
-<h1>Index</h1>
+<div class="row w-100">
+    <h4 class="col">
+        Proveedores
+    </h4>
+   <h4 class="col d-flex justify-content-end">
+        11:21 PM
+    </h4>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+
+
+
+@*-------------------------------------------------------------*@
+<div class="border row w-75 ml-1  ">
+    @*----------------------------------Buscador---------------------------*@
+    <div cite="col container d-flex justify-content-center">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <button class="" type="button" id="button-addon1">
+                    <span class="material-icons">
+                        search
+                    </span>
+                </button>
+            </div>
+            <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+        </div>
+    </div>
+    @*-------------------------------------------------------------*@
+
+
+    <div class="col d-flex justify-content-center align-items-center">
+        <select >
+            <option value="opcion1">Opción 1</option>
+            <option value="opcion2">Opción 2</option>
+            <option value="opcion3">Opción 3</option>
+        </select>
+    </div>
+
+    @*-------------------------------------------------------------*@
+
+    <div class="col d-flex justify-content-center align-items-center">
+        <button class="btn btn-outline-primary w-50">
+            <a asp-action="Create">Create New</a>
+        </button>
+    </div>
+
+</div>
+@*-------------------------------------------------------------*@
+
+
+<table class="table  border w-1283">
     <thead>
         <tr>
             <th>
